codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__status_widget_active.snap
---
source: tui/src/chatwidget/tests.rs
expression: terminal.backend()
---
"                                                                                "
"• Analyzing （0秒 • 按 esc 以中断）                                             " Hidden by multi-width symbols: [(13, " "), (16, " "), (21, " "), (28, " "), (30, " "), (32, " "), (34, " ")]
"                                                                                "
"                                                                                "
"› Ask Codex to do anything                                                      "
"                                                                                "
"  ? 查看快捷键                                                   0% 上下文已用  " Hidden by multi-width symbols: [(5, " "), (7, " "), (9, " "), (11, " "), (13, " "), (69, " "), (71, " "), (73, " "), (75, " "), (77, " ")]
