codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__unified_exec_empty_then_non_empty_after.snap
---
source: tui/src/chatwidget/tests.rs
expression: combined
---
↳ 与后台终端交互 · just fix
  └ （等待）

↳ 与后台终端交互 · just fix
  └ ls
